test(sda-commons-server-s3): update OpenTelemetry s3 attribute names